--- a/.gitignore
+++ b/.gitignore
@@ -87,5 +87,5 @@ ios/Runner.ipa
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-android/app/google-service.txt
-android/keystore.txt
+android/keystore.b4
+android/app/google-services.b4
