--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: stable
-      - run: echo $TENNO_STORE | openssl base64 -d -out android/keystore.jks
-      - run: echo $TENNO_FIREBASE | openssl base64 -d -out android/app/google-services.json
+      - run: base64 -d <<< $TENNO_STORE > android/keystore.jks
+      - run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
