--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,8 @@ android {
         sourceCompatibility "1.8"
         targetCompatibility "1.8"
     }
+    ndkVersion '21.3.6528147'
+    buildToolsVersion '30.0.2'
 }
 
 flutter {
