--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Unit Test
+name: Testing
 on:
   push:
     branches:
@@ -23,9 +23,19 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: stable
+      - run: flutter pub get
+      - run: flutter test
+  android_apk_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: stable
       - run: base64 -d <<< $TENNO_STORE > android/keystore.jks
       - run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
       - run: flutter pub get
-      - run: flutter analyze
-      - run: flutter test
       - run: flutter build apk --release
