--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,15 @@ jobs:
           node-version: "12"
       - uses: cedx/setup-dart@v2
       - name: Install semantic-release dependencies
-      - run: npm install -g semantic-release
-      - run: npm install -g @semantic-release/exec
-      - run: npm install -g @semantic-release/git
+        run:
+          - npm install -g semantic-release
+          - npm install -g @semantic-release/exec
+          - npm install -g @semantic-release/git
       - name: Install Dart packages
-      - run: pub global activate pubspec_version
+        run: pub global activate pubspec_version
       - name: Set execute permissions for versioning script
-      - run: chmod +x deploy.sh
+        run: chmod +x deploy.sh
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: npx semantic-release
+        run: npx semantic-release
