--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,11 +3,9 @@ on:
   push:
     branches:
       - master
-      - n2.0
   pull_request:
     branches:
       - master
-      - n2.0
 jobs:
   semantic-release:
     runs-on: ubuntu-latest
@@ -21,7 +19,7 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/exec
