--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,16 @@ jobs:
       - run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
       - run: flutter pub get
       - run: flutter build apk --release
+  ios-release: # Github's MacOS images come with xcode preinstalled
+    runs-on: macos-latest
+    strategy:
+      fail-fast: true
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: stable
+      - name: Decode service plist
+        run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
+      - name: Build ios using flutter
+        run: flutter build ios
