--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,10 +35,14 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: stable
-      - run: base64 -d <<< $TENNO_STORE > android/keystore.jks
-      - run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
-      - run: flutter pub get
-      - run: flutter build apk --release
+      - name: Decode signing key and services json
+        run: base64 -d <<< $TENNO_STORE > android/keystore.jks
+        run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
+      - name: Build apk  
+        run: flutter pub get
+        run: flutter build apk --split-per-abi
+        run: flutter clean # Cleaning before builds help remove an problems in between them
+        run: flutter build appbundle
   ios-release: # Github's MacOS images come with xcode preinstalled
     runs-on: macos-latest
     strategy:
@@ -51,4 +55,4 @@ jobs:
       - name: Decode service plist
         run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
       - name: Build ios using flutter
-        run: flutter build ios
+        run: flutter build ios --no-codesign # Don't need to sign this version since it's just a compile test
