--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,13 +36,15 @@ jobs:
         with:
           channel: stable
       - name: Decode signing key and services json
-        run: base64 -d <<< $TENNO_STORE > android/keystore.jks
-        run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
-      - name: Build apk  
-        run: flutter pub get
-        run: flutter build apk --split-per-abi
-        run: flutter clean # Cleaning before builds help remove an problems in between them
-        run: flutter build appbundle
+        run: |
+          base64 -d <<< $TENNO_STORE > android/keystore.jks
+          base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
+      - name: Build apk
+        run: |
+          flutter pub get
+          flutter build apk --split-per-abi
+          flutter clean # Cleaning before builds help remove an problems in between them
+          flutter build appbundle
   ios-release: # Github's MacOS images come with xcode preinstalled
     runs-on: macos-latest
     strategy:
