--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           channel: stable
       - run: flutter pub get
       - run: flutter test
-  android_apk_test:
+  android:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,25 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: stable
-      - run: base64 -d <<< $TENNO_STORE > android/keystore.jks
-      - run: base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
-      - run: flutter pub get
-      - run: flutter build apk --release
+      - name: Decode signing key and services json
+        run: |
+          base64 -d <<< $TENNO_STORE > android/keystore.jks
+          base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
+      - name: Build apk
+        run: |
+          flutter build apk --split-per-abi
+          flutter clean # Cleaning before builds help remove an problems in between them
+          flutter build appbundle
+  ios: # Github's MacOS images come with xcode preinstalled
+    runs-on: macos-latest
+    strategy:
+      fail-fast: true
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: stable
+      - name: Decode service plist
+        run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
+      - name: Build ios using flutter
+        run: flutter build ios --no-codesign # Don't need to sign this version since it's just a compile test
