chore(actions):only run deploy when a release is created

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy
 on:
   release:
-    types: [published, created]
+    types: [created]
 jobs:
   android-release:
     runs-on: ubuntu-latest
