--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,6 +55,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            versionNameSuffix "-debug"
+            signingConfig signingConfigs.debug
+        }
+        
         release {
             signingConfig signingConfigs.release
 
