chore(actions): export pub package path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Install Dart packages
         run: pub global activate pubspec_version
       - name: Set execute permissions for versioning script
-        run: chmod +x deploy.sh
+        run: |
+          export PATH="$PATH":"$HOME/.pub-cache/bin"
+          chmod +x deploy.sh
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
