--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: cedx/setup-dart@v2
       - name: Install Dart packages
-        run: pub global activate pubspec_version
+        run: pub global activate cider
       - name: Set execute permissions for versioning script
-        run: |
-          export PATH="$PATH":"$HOME/.pub-cache/bin"
-          chmod +x deploy.sh
+        run: chmod +x deploy.sh
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
