chore(deploy): properly set secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,9 @@ env:
   TENNO_CIPHER: ${{ secrets.TENNO_CIPHER }}
   TENNO_FIREBASE: ${{ secrets.TENNO_FIREBASE }}
   TENNO_STORE: ${{ secrets.TENNO_STORE }}
-  FIREBASE_IOS: ${{ FIREBASE_IOS }}
-  FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
-  FASTLANE_SESSION: ${{ FASTLANE_SESSION }}
+  FIREBASE_IOS: ${{ secrets.FIREBASE_IOS }}
+  FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
+  FASTLANE_SESSION: ${{ secrets.FASTLANE_SESSION }}
 jobs:
   android-release:
     runs-on: ubuntu-latest
