--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           base64 -d <<< $TENNO_STORE > android/keystore.jks
           base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
-          base64 -d <<< $NAVIS_SERVICE_ACCOUNT > android/app/fastlane.json
+          base64 -di <<< $NAVIS_SERVICE_ACCOUNT > android/app/fastlane.json
       - name: Build App bundle
         run: flutter build appbundle
       - name: Google Play Store Deploy
