--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,14 @@ dependencies:
   dartz: ^0.9.1
   data_connection_checker: ^0.3.4
   equatable: ^1.2.5
-  firebase_core: ^0.5.0
-  firebase_crashlytics: ^0.2.1
+  firebase_core: ^0.5.2+1
+  firebase_crashlytics: ^0.2.3+1
   firebase_messaging: ^7.0.2
   flutter_bloc: ^6.1.1
   flutter_brand_icons: ^1.1.0
   flutter_custom_tabs: ^0.6.0
   # flutter_hooks: ^0.15.0
-  flutter_local_notifications: ^3.0.1+5
+  flutter_local_notifications: ^3.0.1+6
   flutter_staggered_grid_view: ^0.3.2
   flutter_sticky_header: ^0.5.0
   flutter_svg: ^0.19.1
