--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   firebase_messaging: ^7.0.2
   flutter_bloc: ^6.1.1
   flutter_brand_icons: ^1.1.0
-  flutter_custom_tabs: ^0.6.0
+  flutter_web_browser: ^0.13.0
   # flutter_hooks: ^0.15.0
   flutter_local_notifications: ^3.0.1+6
   flutter_staggered_grid_view: ^0.3.2
