--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,5 +1,8 @@
 plugins:
-  - "@semantic-release/commit-analyzer"
+  - - "@semantic-release/commit-analyzer"
+    - releaseRules:
+        - type: perf
+          release: patch
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/github"
   - - "@semantic-release/exec"
