--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        run: git fetch
+      - run: git fetch
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
