--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: git fetch
+        with:
+          fetch-depth: 0
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
@@ -57,6 +58,8 @@ jobs:
       fail-fast: true
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: webfactory/ssh-agent@v0.4.1
         with:
           ssh-private-key: ${{ secrets.FASTLANE_DEPLOY_KEY }}
