--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     git: https://github.com/SlayerOrnstein/wfcd_client.git
   bloc: ^6.1.1
   cached_network_image: ^2.4.1
-  chewie: ^0.12.0
+  chewie: ^0.12.1+1
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
   equatable: ^1.2.5
@@ -35,14 +35,14 @@ dependencies:
   package_info: ^0.4.0+17
   responsive_builder: ^0.3.0
   supercharged: ^1.12.0
-  youtube_explode_dart: ^1.7.4
+  youtube_explode_dart: ^1.7.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   extra_pedantic: ^1.2.0
   mockito: ^4.1.3
-  test: ^1.15.6
+  test: ^1.15.7
 
 flutter:
   generate: true
