--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 2.1.4+127
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,36 +12,39 @@ dependencies:
     sdk: flutter
   wfcd_client:
     git: https://github.com/SlayerOrnstein/wfcd_client.git
-  bloc: ^6.1.1
+  bloc: ^7.0.0-nullsafety.0
   cached_network_image: ^2.4.1
   chewie: ^0.12.1+1
-  dartz: ^0.9.2
+  dartz: ^0.10.0-nullsafety.0
   data_connection_checker: ^0.3.4
-  equatable: ^1.2.5
+  equatable: ^2.0.0-nullsafety.1
   firebase_core: ^0.5.3
   firebase_crashlytics: ^0.2.4
   firebase_messaging: ^7.0.2
-  flutter_bloc: ^6.1.1
+  flutter_bloc: ^7.0.0-nullsafety.0
   flutter_brand_icons: ^1.1.0
   flutter_web_browser: ^0.13.0
   flutter_local_notifications: ^3.0.2
   flutter_sticky_header: ^0.5.0
-  flutter_svg: ^0.19.1
-  get_it: ^5.0.3
+  flutter_svg: ^0.20.0-nullsafety.3
+  get_it: ^6.0.0-nullsafety.2
   hive: ^1.4.4+1
   hydrated_bloc: ^6.1.0
-  intl: ^0.16.1
+  intl: ^0.17.0-nullsafety.2
   package_info: ^0.4.0+17
   responsive_builder: ^0.3.0
-  supercharged: ^1.12.0
+  supercharged: ^2.0.0-nullsafety.1
   youtube_explode_dart: ^1.7.5
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
   extra_pedantic: ^1.2.0
   mockito: ^4.1.3
   test: ^1.15.7
+
+dependency_overrides:
+  equatable: ^2.0.0-nullsafety.1
 
 flutter:
   generate: true
