--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,14 +1,12 @@
-include: package:extra_pedantic/analysis_options_flutter.yaml
-
+include: package:very_good_analysis/analysis_options.yaml
 analyzer:
   exclude:
     - lib/generated/l10n.dart
     - lib/generated/intl/messages_*.dart
     - lib/src/**/*g.dart
     - lib/src/models/**/*.g.dart
-
 linter:
   rules:
-    - prefer_const_constructors
-    - avoid_relative_lib_imports
-    - prefer_relative_imports
+    public_member_api_docs: false
+    prefer_relative_imports: true
+    
