--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  extra_pedantic: ^1.2.0
+  very_good_analysis: ^1.0.4
   mockito: ^4.1.3
   test: ^1.15.7
 
