--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,15 @@ dependencies:
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
   equatable: ^1.2.6
-  firebase_core: ^0.5.3
-  firebase_crashlytics: ^0.2.4
-  firebase_messaging: ^7.0.2
+  firebase_core: ^0.7.0
+  firebase_crashlytics: ^0.4.0+1
+  firebase_messaging: ^8.0.0-dev.15
   flutter_bloc: ^6.1.2
   flutter_brand_icons: ^1.1.0
   flutter_sticky_header: ^0.5.0
   flutter_svg: ^0.19.1
   flutter_web_browser: ^0.13.0
-  get_it: ^5.0.3
+  get_it: ^5.0.6
   hive: ^1.4.4+1
   hydrated_bloc: ^6.1.0
   intl: ^0.16.1
@@ -39,8 +39,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^1.0.4
-  mockito: ^4.1.3
-  test: ^1.15.7
+  mockito: ^4.1.4
+  test: ^1.16.0-nullsafety.5
 
 flutter:
   generate: true
