--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   dartz: ^0.9.2
   data_connection_checker: ^0.3.4
   # equatable: ^1.2.6
-  firebase_core: ^0.7.0
-  firebase_messaging: ^8.0.0-dev.15
+  firebase_core: ^1.0.0
+  firebase_messaging: ^9.0.0
   flutter_bloc: ^6.1.3
   flutter_brand_icons: ^1.1.0
   flutter_sticky_header: ^0.5.0
@@ -47,6 +47,7 @@ dev_dependencies:
 dependency_overrides:
   equatable: ^2.0.0
   intl: ^0.17.0
+  path_provider: ^2.0.1
 
 flutter:
   generate: true
