--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,13 @@ dependencies:
   package_info: ^0.4.0+13
   responsive_builder: ^0.3.0
   sentry_flutter: ^4.0.0
-  supercharged: ^2.0.0-nullsafety.2
+  supercharged: ^2.0.0
   youtube_explode_dart: ^1.7.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^1.0.4
+  very_good_analysis: ^2.0.0
   mockito: ^4.1.4
   test: ^1.16.0-nullsafety.5
 
