--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Cephalon Navis is an Android app inspired by Warframe Hub.
 publish_to: none
 
 environment:
-  sdk: ">=2.10.5 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -13,29 +13,29 @@ dependencies:
     sdk: flutter
   wfcd_client:
     git: https://github.com/SlayerOrnstein/wfcd_client.git
-  bloc: ^6.1.3
-  cached_network_image: ^2.4.1
+  bloc: ^7.0.0-nullsafety.3
+  cached_network_image: ^3.0.0-nullsafety
   chewie: ^1.0.0
-  dartz: ^0.9.2
-  data_connection_checker: ^0.3.4
-  # equatable: ^1.2.6
-  firebase_core: ^1.0.0
+  dartz: ^0.10.0-nullsafety.1
+  internet_connection_checker: ^0.0.1
+  equatable: ^2.0.0
+  firebase_core: ^1.0.1
   firebase_messaging: ^9.0.0
-  flutter_bloc: ^6.1.3
-  flutter_brand_icons: ^1.1.0
+  flutter_bloc: ^7.0.0-nullsafety.5
+  simple_icons: ^4.15.0
   flutter_sticky_header: ^0.5.0
-  flutter_svg: ^0.19.3
-  flutter_web_browser: ^0.13.0
+  flutter_svg: ^0.21.0-nullsafety.0
+  flutter_web_browser: ^0.14.0
   get_it: ^6.0.0
-  hive: ^1.4.4+1
-  hydrated_bloc: ^6.1.0
-  # intl: ^0.17.0
+  hive: ^2.0.0
+  hydrated_bloc: ^7.0.0-nullsafety.3
+  intl: ^0.17.0
   matomo: ^0.0.9
-  package_info: ^0.4.0+13
-  responsive_builder: ^0.3.0
-  sentry_flutter: ^4.0.0
+  package_info: ^2.0.0
+  responsive_builder: ^0.4.0-nullsafety.1
+  sentry_flutter: ^4.1.0-nullsafety.1
   supercharged: ^2.0.0
-  youtube_explode_dart: ^1.7.5
+  youtube_explode_dart: ^1.9.0-nullsafety.3
 
 dev_dependencies:
   flutter_test:
@@ -44,11 +44,11 @@ dev_dependencies:
   mockito: ^4.1.4
   test: ^1.16.0-nullsafety.5
 
-dependency_overrides:
-  equatable: ^2.0.0
-  intl: ^0.17.0
-  path_provider: ^2.0.1
-  json_annotation: ^4.0.0
+# dependency_overrides:
+#   equatable: ^2.0.0
+#   intl: ^0.17.0
+#   path_provider: ^2.0.1
+#   json_annotation: ^4.0.0
 
 flutter:
   generate: true
