--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,25 +19,21 @@ dependencies:
   dartz: ^0.10.0-nullsafety.1
   internet_connection_checker: ^0.0.1
   equatable: ^2.0.0
-  firebase_core: ^1.0.2
-  firebase_messaging: ^9.1.0
+  firebase_core: ^1.0.3
+  firebase_messaging: ^9.1.1
   flutter_bloc: ^7.0.0
-  flutter_sticky_header:
-    git:
-      url: https://github.com/Femtopedia/flutter_sticky_header.git
-      ref: master
-  flutter_svg: ^0.21.0-nullsafety.0
+  flutter_sticky_header: ^0.6.0
+  flutter_svg: ^0.21.0+1
   flutter_web_browser: ^0.14.0
-  get_it: ^6.0.0
-  hive: ^2.0.2
+  get_it: ^6.1.1
+  hive: ^2.0.3
   hydrated_bloc: ^7.0.0
   intl: ^0.17.0
-  matomo:
-    git: https://github.com/SlayerOrnstein/dart-matomo.git
+  matomo: ^0.1.0
   package_info: ^2.0.0
   responsive_builder: ^0.4.1
   sentry_flutter: ^5.0.0
-  simple_icons: ^4.17.0
+  simple_icons: ^4.20.0
   supercharged: ^2.0.0
   youtube_explode_dart: ^1.9.1
 
