--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,14 @@ dependencies:
   dartz: ^0.10.0-nullsafety.1
   internet_connection_checker: ^0.0.1
   equatable: ^2.0.0
-  firebase_core: ^1.0.3
-  firebase_messaging: ^9.1.1
+  firebase_core: ^1.0.4
+  firebase_messaging: ^9.1.2
   flutter_bloc: ^7.0.0
   flutter_sticky_header: ^0.6.0
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^0.22.0
   flutter_web_browser: ^0.14.0
   get_it: ^6.1.1
-  hive: ^2.0.3
+  hive: ^2.0.4
   hydrated_bloc: ^7.0.0
   intl: ^0.17.0
   matomo: ^0.1.0
@@ -40,7 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.0.0
+  very_good_analysis: ^2.0.3
   mocktail: ^0.1.1
   test: ^1.16.5
 
