--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
   dartz: ^0.10.0-nullsafety.1
   internet_connection_checker: ^0.0.1
   equatable: ^2.0.0
-  firebase_core: ^1.0.4
-  firebase_messaging: ^9.1.2
+  firebase_core: ^1.1.0
+  firebase_messaging: ^9.1.3
   flutter_bloc: ^7.0.0
   flutter_sticky_header: ^0.6.0
   flutter_svg: ^0.22.0
@@ -29,26 +29,20 @@ dependencies:
   hive: ^2.0.4
   hydrated_bloc: ^7.0.0
   intl: ^0.17.0
-  matomo: ^0.1.0
+  matomo: ^0.1.1
   package_info: ^2.0.0
   responsive_builder: ^0.4.1
   sentry_flutter: ^5.0.0
-  simple_icons: ^4.20.0
+  simple_icons: ^4.21.0
   supercharged: ^2.0.0
-  youtube_explode_dart: ^1.9.1
+  youtube_explode_dart: ^1.9.2+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^2.0.3
-  mocktail: ^0.1.1
+  mocktail: ^0.1.2
   test: ^1.16.5
-
-# dependency_overrides:
-#   equatable: ^2.0.0
-#   intl: ^0.17.0
-#   path_provider: ^2.0.1
-#   json_annotation: ^4.0.0
 
 flutter:
   generate: true
