--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,6 @@ dependencies:
   bloc: ^7.0.0
   cached_network_image: ^3.0.0-nullsafety
   chewie: ^1.0.0
-  dartz: ^0.10.0-nullsafety.1
-  internet_connection_checker: ^0.0.1
   equatable: ^2.0.0
   firebase_core: ^1.1.0
   firebase_messaging: ^9.1.3
@@ -25,11 +23,13 @@ dependencies:
   flutter_sticky_header: ^0.6.0
   flutter_svg: ^0.22.0
   flutter_web_browser: ^0.14.0
-  get_it: ^6.1.1
+  get_it: ^7.0.0
   hive: ^2.0.4
   hydrated_bloc: ^7.0.0
+  internet_connection_checker: ^0.0.1
   intl: ^0.17.0
   matomo: ^0.1.1
+  oxidized: ^4.2.0
   package_info: ^2.0.0
   responsive_builder: ^0.4.1
   sentry_flutter: ^5.0.0
@@ -40,9 +40,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.0.3
   mocktail: ^0.1.2
   test: ^1.16.5
+  very_good_analysis: ^2.0.3
 
 flutter:
   generate: true
