--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   oxidized: ^4.2.0
   package_info: ^2.0.0
   responsive_builder: ^0.4.1
+  retry: ^3.1.0
   sentry_flutter: ^5.0.0
   simple_icons: ^4.22.0
   supercharged: ^2.0.0
-  youtube_explode_dart: ^1.9.3+2
+  youtube_explode_dart: ^1.9.4
 
 dev_dependencies:
   flutter_test:
