--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   wfcd_client:
-    git: https://github.com/SlayerOrnstein/wfcd_client.git
+    git:
+      url: https://github.com/SlayerOrnstein/wfcd_client.git
+      ref: v3.4.1
   bloc: ^7.0.0
   cached_network_image: ^3.0.0
   chewie: ^1.2.2
