--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,18 +15,22 @@ env:
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
   MATOMO_URL: ${{ secrets.MATOMO_URL }}
 jobs:
-  unit_test:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
+      - name: Installing Flutter SDK
+        uses: subosito/flutter-action@v1
         with:
           channel: stable
-      - run: flutter pub get
-      - run: flutter test
+      - name: Install app dependencies
+        run: flutter pub get
+      - name: Unit Test app
+      - run: flutter test --coverage
+      - name: Uploade coverage to Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-toke: ${{ secrets.GITHUB_TOKEN }}
   android:
     runs-on: ubuntu-latest
     steps:
