--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install app dependencies
         run: flutter pub get
       - name: Unit Test app
-      - run: flutter test --coverage
+        run: flutter test --coverage
       - name: Uploade coverage to Coveralls
         uses: coverallsapp/github-action@master
         with:
