--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,6 @@ on:
     branches:
       - master
 env:
-  TENNO_CIPHER: ${{ secrets.TENNO_CIPHER }}
-  TENNO_FIREBASE: ${{ secrets.TENNO_FIREBASE }}
-  TENNO_STORE: ${{ secrets.TENNO_STORE }}
-  FIREBASE_IOS: ${{ secrets.FIREBASE_IOS }}
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
   MATOMO_URL: ${{ secrets.MATOMO_URL }}
 jobs:
@@ -30,9 +26,13 @@ jobs:
       - name: Uploade coverage to Coveralls
         uses: coverallsapp/github-action@master
         with:
-          github-toke: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
   android:
     runs-on: ubuntu-latest
+    env:
+      TENNO_CIPHER: ${{ secrets.TENNO_CIPHER }}
+      TENNO_FIREBASE: ${{ secrets.TENNO_FIREBASE }}
+      TENNO_STORE: ${{ secrets.TENNO_STORE }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -58,6 +58,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       fail-fast: true
+    env:
+      FIREBASE_IOS: ${{ secrets.FIREBASE_IOS }}
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
