--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
       ref: v3.4.2
+  market_client:
+    git:
+      url: https://github.com/SlayerOrnstein/market_client.git
   bloc: ^7.0.0
   cached_network_image: ^3.0.0
   chewie: ^1.2.2
@@ -25,7 +28,7 @@ dependencies:
   flutter_sticky_header: ^0.6.0
   flutter_svg: ^0.22.0
   flutter_web_browser: ^0.14.0
-  get_it: ^7.1.3
+  get_it: ^7.2.0
   hive: ^2.0.4
   hydrated_bloc: ^7.0.1
   internet_connection_checker: ^0.0.1+1
@@ -38,7 +41,7 @@ dependencies:
   sentry_flutter: ^5.1.0
   simple_icons: ^5.2.0
   supercharged: ^2.0.0
-  youtube_explode_dart: ^1.9.7
+  youtube_explode_dart: ^1.9.10
 
 dev_dependencies:
   flutter_test:
