chore: add semantic-release-sentry-releases

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -10,5 +10,6 @@ plugins:
   - - "@semantic-release/git"
     - assets: ["pubspec.yaml"]
       message: "chore(release): ${nextRelease.version}"
+  - "@eclass/semantic-release-sentry-releases"
 branches:
   - master
