--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   market_client:
     git:
       url: https://github.com/SlayerOrnstein/market_client.git
+      ref: v1.0.0
   bloc: ^7.0.0
   cached_network_image: ^3.0.0
   chewie: ^1.2.2
@@ -27,7 +28,7 @@ dependencies:
   flutter_bloc: ^7.0.1
   flutter_sticky_header: ^0.6.0
   flutter_svg: ^0.22.0
-  flutter_web_browser: ^0.14.0
+  flutter_web_browser: ^0.15.0
   get_it: ^7.2.0
   hive: ^2.0.4
   hydrated_bloc: ^7.0.1
