feat: Warframe Market partial intergration (#101)
* fix(darvo): show an error icon when an item hasn't been found

* chore: update fastlane

* chore(release): 2.3.20

* fix: remove empty values for new weapons

* chore: add market widget and logic

* chore: update android build tools to 4.2.2

* chore: remove forced light theme mode

* chore: made offline grey color lighter to contrast properly in dark mode

* chore: replace the word "Price" for "Platinum" to avoid confusion

* fix: back key opens drawer now works properly

* chore: remove green border when debugging

* style: remove unsused imports

* chore: codex entry now has a static height

* chore: scale codex image by width not height

* chore: convert MarketCubit into a bloc for hydration

* chore: possible fix for entry info being cut off on some devices

* chore(ios): update podfile

* chore: increased height of entry body

* fix: platfrom not saving properly

* chore: more flexible way of rendering entry info

* perf: improve caching

* style: import cleanup

* test: fix test using hive boxes

* chore: filter by sell orders only

* chore(release): 2.3.20

* chore: add market widget and logic

* chore: update android build tools to 4.2.2

* chore: remove forced light theme mode

* chore: made offline grey color lighter to contrast properly in dark mode

* chore: replace the word "Price" for "Platinum" to avoid confusion

* fix: back key opens drawer now works properly

* chore: remove green border when debugging

* style: remove unsused imports

* chore: codex entry now has a static height

* chore: convert MarketCubit into a bloc for hydration

* chore: possible fix for entry info being cut off on some devices

* chore: more flexible way of rendering entry info

* perf: improve caching

* style: import cleanup

* test: fix test using hive boxes

* chore: filter by sell orders only

* chore: increased the height of the entry 

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,17 @@ dependencies:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
       ref: v3.4.7
+  market_client:
+    git:
+      url: https://github.com/SlayerOrnstein/market_client.git
+      ref: v1.0.0
   bloc: ^7.0.0
   cached_network_image: ^3.0.0
   chewie: ^1.2.2
   equatable: ^2.0.3
   firebase_core: ^1.3.0
   firebase_messaging: ^10.0.3
-  flutter_bloc: ^7.0.1
+  flutter_bloc: ^7.1.0
   flutter_sticky_header: ^0.6.0
   flutter_svg: ^0.22.0
   flutter_web_browser: ^0.15.0
@@ -38,14 +42,14 @@ dependencies:
   sentry_flutter: ^5.1.0
   simple_icons: ^5.2.0
   supercharged: ^2.0.0
-  youtube_explode_dart: ^1.9.7
+  youtube_explode_dart: ^1.9.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^0.1.4
   test: ^1.16.8
-  very_good_analysis: ^2.1.2
+  very_good_analysis: ^2.2.0
 
 flutter:
   generate: true
