--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   market_client:
     git:
       url: https://github.com/SlayerOrnstein/market_client.git
-      ref: v1.0.0
+      ref: v1.0.1
   bloc: ^7.0.0
   cached_network_image: ^3.0.0
   chewie: ^1.2.2
@@ -39,7 +39,7 @@ dependencies:
   package_info: ^2.0.2
   responsive_builder: ^0.4.1
   retry: ^3.1.0
-  sentry_flutter: ^5.1.0
+  sentry_flutter: ^6.0.0-beta.3
   simple_icons: ^5.2.0
   supercharged: ^2.0.0
   youtube_explode_dart: ^1.9.10
@@ -49,7 +49,7 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^0.1.4
   test: ^1.16.8
-  very_good_analysis: ^2.2.0
+  very_good_analysis: ^2.3.0
 
 flutter:
   generate: true
