--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^7.2.0-dev.1
+  bloc_concurrency: ^0.1.0-dev.1
   cached_network_image: ^3.0.0
   equatable: ^2.0.3
   firebase_core: ^1.6.0
