--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,22 +7,21 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  bloc: ^7.2.0-dev.1
-  bloc_concurrency: ^0.1.0-dev.1
+  bloc: ^7.2.0
   cached_network_image: ^3.0.0
   equatable: ^2.0.3
   firebase_core: ^1.6.0
-  firebase_messaging: ^10.0.6
+  firebase_messaging: ^10.0.7
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.2.0
+  flutter_bloc: ^7.3.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^0.22.0
   flutter_web_browser: ^0.15.0
   get_it: ^7.2.0
   hive: ^2.0.4
-  hydrated_bloc: ^7.0.1
+  hydrated_bloc: ^7.1.0
   internet_connection_checker: ^0.0.1+2
   intl: ^0.17.0
   market_client:
@@ -30,13 +29,12 @@ dependencies:
       url: https://github.com/SlayerOrnstein/market_client.git
       ref: v1.0.1
   matomo: ^1.0.0
-  oxidized: ^5.0.0
+  oxidized: ^5.1.0
   package_info: ^2.0.2
   responsive_builder: ^0.4.1
   retry: ^3.1.0
-  sentry_flutter: ^6.0.0
-  simple_icons: ^5.2.0
-  supercharged: ^2.0.0
+  sentry_flutter: ^6.0.1
+  simple_icons: ^5.14.0
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
