--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^0.1.4
+  sentry_dart_plugin: ^1.0.0-alpha.4
   test: ^1.17.10
   very_good_analysis: ^2.3.0
 
