Revert "chore(deploy): long lines it is"
This reverts commit 9f6d399d98951ef90dc3392873c8a5aa4db07cda.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,11 @@ jobs:
           base64 -di <<< $NAVIS_SERVICE_ACCOUNT > android/app/fastlane.json
 
       - name: Build App bundle
-        run: flutter build appbundle --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_production.dart --obfuscate --split-debug-info=debug_info
+        run: |
+          flutter build appbundle \
+            --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL \
+            -t lib/main_production.dart \
+            --obfuscate --split-debug-info=debug_info
 
       - uses: actions/setup-ruby@v1
         with:
@@ -66,7 +70,9 @@ jobs:
 
       - name: Build split apks per abi
         run: |
-          flutter build apk --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_production.dart --split-per-abi
+          flutter build apk \
+          --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL \
+          -t lib/main_production.dart --split-per-abi
 
       - name: Github Releases Deploy
         uses: xresloader/upload-to-github-release@v1
