--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,3 +73,8 @@ flutter:
     - assets/event_info.json
     - assets/wfcd_logo_color.svg
     # - assets/mod_frames/
+
+sentry:
+  upload_native_symbols: true
+  include_native_sources: true
+  wait_for_processing: true
