--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
 name: Deploy
 on:
-  push:
-    branches:
-      - master
-  # release:
-  #   types: [created]
+  release:
+    types: [created]
 
 env:
   FLUTTER_VERSION: stable
