--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,15 @@ dependencies:
   firebase_messaging: ^10.0.7
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.3.0
+  flutter_bloc: ^7.3.1
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^0.22.0
+  flutter_svg: ^0.23.0+1
   flutter_web_browser: ^0.15.0
   get_it: ^7.2.0
   hive: ^2.0.4
   hydrated_bloc: ^7.1.0
-  internet_connection_checker: ^0.0.1+2
+  internet_connection_checker: ^0.0.1+3
   intl: ^0.17.0
   market_client:
     git:
@@ -44,10 +44,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mocktail: ^0.1.4
+  mocktail: ^0.2.0
   sentry_dart_plugin: ^1.0.0-alpha.4
   test: ^1.17.10
-  very_good_analysis: ^2.3.0
+  very_good_analysis: ^2.4.0
 
 flutter:
   generate: true
