--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,33 +8,33 @@ environment:
 
 dependencies:
   animations: ^2.0.2
-  bloc: ^7.2.0
-  cached_network_image: ^3.0.0
+  bloc: ^8.0.0
+  cached_network_image: ^3.1.0+1
   equatable: ^2.0.3
-  firebase_core: ^1.8.0
-  firebase_messaging: ^10.0.9
+  firebase_core: ^1.10.0
+  firebase_messaging: ^11.1.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.3.1
+  flutter_bloc: ^8.0.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^0.23.0+1
   flutter_web_browser: ^0.15.0
   get_it: ^7.2.0
   hive: ^2.0.4
-  hydrated_bloc: ^7.1.0
+  hydrated_bloc: ^8.0.0
   internet_connection_checker: ^0.0.1+3
   intl: ^0.17.0
   market_client:
     git:
       url: https://github.com/SlayerOrnstein/market_client.git
       ref: v1.1.1
-  matomo: ^1.0.0
+  matomo: ^1.1.0
   oxidized: ^5.1.0
   package_info: ^2.0.2
   responsive_builder: ^0.4.1
   retry: ^3.1.0
-  sentry_flutter: ^6.0.1
+  sentry_flutter: ^6.1.2
   simple_icons: ^5.19.0
   wfcd_client:
     git:
