chore(android): add build flavors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,6 +55,18 @@ android {
         }
     }
 
+    flavorDimensions "default"
+    productFlavors { 
+        production {
+            dimension "default"
+            applicationIdSuffix ""
+        }      
+        development {
+            dimension "default"
+            applicationIdSuffix ".dev"
+        }
+    }
+
     buildTypes {
         debug {
             versionNameSuffix "-debug"
