--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -38,11 +38,8 @@ jobs:
           base64 -d <<< $TENNO_STORE > android/keystore.jks
           base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
 
-      - name: Build apk
-        run: |
-          flutter build appbundle --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_development.dart
-          flutter clean # Cleaning before builds help remove an problems in between them
-          flutter build apk --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_development.dart --split-per-abi
+      - name: Build apks
+        run: flutter build apk --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_development.dart --split-per-abi
 
       - uses: actions/upload-artifact@v2
         with:
