--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -39,7 +39,7 @@ jobs:
           base64 -d <<< $TENNO_FIREBASE > android/app/google-services.json
 
       - name: Build apks
-        run: flutter build apk --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_development.dart --split-per-abi
+        run: flutter build apk --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL --flavor dev -t lib/main_dev.dart --split-per-abi
 
       - uses: actions/upload-artifact@v2
         with:
@@ -66,7 +66,7 @@ jobs:
         run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
 
       - name: Build ios using flutter
-        run: flutter build ios --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_development.dart --no-codesign
+        run: flutter build ios --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_dev.dart --no-codesign
 
       - uses: actions/upload-artifact@v2
         with:
