--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: android-test-artifacts
-          path: "build/app/outputs/apk/dev/*.apk"
+          path: "build/app/outputs/flutter-apk/app-*-dev-release.apk"
 
   ios:
     runs-on: macos-latest
