chore(android): add a dev version name suffix

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,7 @@ android {
         }      
         dev {
             dimension "default"
+            versionNameSuffix "-dev"
             applicationIdSuffix ".dev"
         }
     }
