--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,10 @@ jobs:
         run: pub global activate cider
       - name: Set execute permissions for versioning script
         run: chmod +x deploy.sh
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v2.5.4
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/exec
